Added tableAndForm.html and css

--- a/resturant.html
+++ b/resturant.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="resturant.css">
+    <link rel="stylesheet" href="resturant.css" />
   </head>
   <body>
     <header>
@@ -62,7 +62,7 @@
       <div class="cards">
         <div class="card">
           <img
-            src="/Frontend-HTML-CSS-JS/images/noodles.png"
+            src="https://raw.github.com/mmubashirdev/Frontend-HTML-CSS-JS/main/images/noodles.png"
             alt="noodles"
             width="180px"
           />
@@ -76,7 +76,7 @@
         </div>
         <div class="card">
           <img
-            src="/Frontend-HTML-CSS-JS/images/dinner.png"
+            src="https://raw.github.com/mmubashirdev/Frontend-HTML-CSS-JS/main/images/dinner.png"
             alt="food"
             width="180px"
           />
@@ -91,7 +91,7 @@
         </div>
         <div class="card">
           <img
-            src="/Frontend-HTML-CSS-JS/images/eggdish.png"
+            src="https://raw.github.com/mmubashirdev/Frontend-HTML-CSS-JS/main/images/eggdish.png"
             alt="food"
             width="180px"
           />
@@ -144,7 +144,7 @@
         <div class="feedback">
           <img
             id="man"
-            src="/Frontend-HTML-CSS-JS/images/the-man-06.png"
+            src="https://raw.github.com/mmubashirdev/Frontend-HTML-CSS-JS/main/images/the-man-06.png"
             alt="client"
             width="120px"
             height="120px"
@@ -157,7 +157,7 @@
             distribution of letters,
           </p>
           <img
-            src="/Frontend-HTML-CSS-JS/images/quotationMark.png"
+            src="https://raw.github.com/mmubashirdev/Frontend-HTML-CSS-JS/main/images/quotationMark.png"
             alt="quotation mark"
             width="50px"
           />
@@ -170,7 +170,7 @@
       </div>
       <div class="img">
         <img
-          src="/Frontend-HTML-CSS-JS/images/breakfast.png"
+          src="https://raw.github.com/mmubashirdev/Frontend-HTML-CSS-JS/main/images/breakfast.png"
           alt="breakfast"
           width="500px"
         />
