--- a/project20/index.html
+++ b/project20/index.html
@@ -179,90 +179,106 @@
           ></button>
         </div>
         <div class="carousel-inner">
+          <div class="carousel-item">
+            <div class="container pt-5">
+              <div class="row align-items-center">
+                <div class="d-sm-block d-md-flex d-lg-flex">
+                  <div>
+                    <h5 class="display-4 fw-light text-uppercase">
+                      end season smartphones
+                    </h5>
+
+                    <p class="fw-bold text-uppercase">
+                      last call for up to
+                      <span class="fs-1"><sup>$</sup>250</span> off!
+                    </p>
+
+                    <button
+                      type="button"
+                      class="btn btn-warning px-5 rounded-3"
+                    >
+                      Start Buying
+                    </button>
+                  </div>
+
+                  <div class="col-md-6 col-lg-8">
+                    <img
+                      src="images/slider-v12-image.webp"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="carousel-item active">
             <div class="container pt-5">
               <div class="row align-items-center">
-                <div class="d-none d-md-block col-md-6 col-lg">
-                  <h5 class="display-4 fw-light text-uppercase">
-                    end season smartphones
-                  </h5>
+                <div class="d-sm-block d-md-flex d-lg-flex">
+                  <div>
+                    <h5 class="display-4 fw-light text-uppercase">
+                      end season smartphones
+                    </h5>
 
-                  <p class="fw-bold text-uppercase">
-                    last call for up to
-                    <span class="fs-1"><sup>$</sup>250</span> off!
-                  </p>
+                    <p class="fw-bold text-uppercase">
+                      last call for up to
+                      <span class="fs-1"><sup>$</sup>250</span> off!
+                    </p>
 
-                  <button type="button" class="btn btn-warning px-5 rounded-3">
-                    Start Buying
-                  </button>
-                </div>
+                    <button
+                      type="button"
+                      class="btn btn-warning px-5 rounded-3"
+                    >
+                      Start Buying
+                    </button>
+                  </div>
 
-                <div class="col-md-6 col-lg-8">
-                  <img
-                    src="images/slider-v12-image.webp"
-                    class="img-fluid"
-                    alt=""
-                  />
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container py-5">
-              <div class="row align-items-center">
-                <div class="d-none d-md-block col-md-6 col-lg">
-                  <h5 class="display-4 fw-light text-uppercase">
-                    end season smartphones
-                  </h5>
-
-                  <p class="fw-bold text-uppercase">
-                    last call for up to
-                    <span class="fs-1"><sup>$</sup>250</span> off!
-                  </p>
-
-                  <button type="button" class="btn btn-warning px-5 rounded-3">
-                    Start Buying
-                  </button>
-                </div>
-
-                <div class="col-md-6 col-lg-8">
-                  <img
-                    src="images/slider-v12-image.webp"
-                    class="img-fluid"
-                    alt=""
-                  />
+                  <div class="col-md-6 col-lg-8">
+                    <img
+                      src="images/slider-v12-image.webp"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <div class="container py-5">
+            <div class="container pt-5">
               <div class="row align-items-center">
-                <div class="d-none d-md-block col-md-6 col-lg">
-                  <h5 class="display-4 fw-light text-uppercase">
-                    end season smartphones
-                  </h5>
+                <div class="d-sm-block d-md-flex d-lg-flex">
+                  <div>
+                    <h5 class="display-4 fw-light text-uppercase">
+                      end season smartphones
+                    </h5>
 
-                  <p class="fw-bold text-uppercase">
-                    last call for up to
-                    <span class="fs-1"><sup>$</sup>250</span> off!
-                  </p>
+                    <p class="fw-bold text-uppercase">
+                      last call for up to
+                      <span class="fs-1"><sup>$</sup>250</span> off!
+                    </p>
 
-                  <button type="button" class="btn btn-warning px-5 rounded-3">
-                    Start Buying
-                  </button>
-                </div>
+                    <button
+                      type="button"
+                      class="btn btn-warning px-5 rounded-3"
+                    >
+                      Start Buying
+                    </button>
+                  </div>
 
-                <div class="col-md-6 col-lg-8">
-                  <img
-                    src="images/slider-v12-image.webp"
-                    class="img-fluid"
-                    alt=""
-                  />
+                  <div class="col-md-6 col-lg-8">
+                    <img
+                      src="images/slider-v12-image.webp"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          
         </div>
         <button
           class="carousel-control-prev"
@@ -364,7 +380,7 @@
       </div>
       <h2 class="border-bottom mx-5 pt-0 fs-3 fw-light">Hot Products Today</h2>
       <div class="row gap-2 mx-5">
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Bluetooth Speakers,
           </div>
@@ -382,7 +398,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Bluetooth Speakers,
           </div>
@@ -400,7 +416,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Bluetooth Speakers,
           </div>
@@ -418,7 +434,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Bluetooth Speakers,
           </div>
@@ -436,7 +452,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Bluetooth Speakers,
           </div>
@@ -454,7 +470,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 col-2 width">
+        <div class="card border-0 col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Bluetooth Speakers,
           </div>
@@ -523,7 +539,7 @@
       </div>
       <h2 class="border-bottom mx-5 pt-0 fs-3 fw-light">New Products</h2>
       <div class="row gap-2 mx-5">
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Accessories, Headphone
           </div>
@@ -541,7 +557,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Accessories, Headphone
           </div>
@@ -559,7 +575,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Accessories, Headphone
           </div>
@@ -577,7 +593,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Game Consoles, Video Games
           </div>
@@ -595,7 +611,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Audio Speakers, TV & Audio
           </div>
@@ -613,7 +629,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 col-2 width">
+        <div class="card border-0 col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Laptops, Laptops &
           </div>
@@ -634,7 +650,7 @@
       </div>
       <h2 class="border-bottom mx-5 pt-0 fs-3 fw-light my-5">Recommendation</h2>
       <div class="row gap-2 mx-5">
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Accessories, Headphone
           </div>
@@ -652,7 +668,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Accessories, Headphone
           </div>
@@ -670,7 +686,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Accessories, Headphone
           </div>
@@ -688,7 +704,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Accessories, Headphone
           </div>
@@ -706,7 +722,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 border-end col-2 width">
+        <div class="card border-0 border-end col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Accessories, Headphone
           </div>
@@ -724,7 +740,7 @@
             </div>
           </div>
         </div>
-        <div class="card border-0 col-2 width">
+        <div class="card border-0 col-6 col-md col-lg-2 width">
           <div class="card-text-wrapper text-body-tertiary">
             Accessories, Headphone
           </div>
@@ -904,7 +920,7 @@
         <button class="btn btn-light ms-2" id="nextBtn">›</button>
       </div>
       <div class="row g-0 ms-4 me-5 pb-5">
-        <div class="col-sm-6">
+        <div class="col-sm-6 col-lg-3">
           <h2 class="border-bottom mx-2 pt-0 fs-5 fw-medium pb-3 pt-0 my-3">
             Featured Products
           </h2>
@@ -982,7 +998,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 col-lg-3">
           <h2 class="border-bottom mx-2 pt-0 fs-5 fw-medium pb-3 pt-0 my-3">
             Top Selling Products
           </h2>
@@ -1053,7 +1069,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 col-lg-3">
           <h2 class="border-bottom mx-2 pt-0 fs-5 fw-medium pb-3 pt-0 my-3">
             On-sale Products
           </h2>
@@ -1159,7 +1175,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 col-lg-3">
           <img src="images/ad.png" alt="" />
         </div>
       </div>
